# ----------all_ultimate

./: industrial_workshop_interview_prep.md  nm_stdout.txt  openocd_test.err  openocd_test.out  project.code-workspace  project.uvguix.king  project.uvoptx  project.uvprojx
.eide/: eide.yml  env.ini  files.options.yml
Freertos/: FreeRTOSConfig.h
Listings/: project.map  startup_stm32f40_41xxx.lst
Objects/: all_sensor_data.crf  all_sensor_data.d  croutine.crf  croutine.d  delay.crf  delay.d  diag_task.crf  diag_task.d  esp01s.crf  esp01s.d  event_groups.crf  event_groups.d  heap_4.crf  heap_4.d  json_parse.crf  json_parse.d  key.crf  key.d  led.crf  led.d  list.crf  list.d  logic.crf  logic.d  main.crf  main.d  misc.crf  misc.d  modbus_relay.crf  modbus_relay.d  motor_fan.crf  motor_fan.d  mqtt_app.crf  mqtt_app.d  oled.crf  oled.d  oled_data.crf  oled_data.d  port.crf  port.d  (+115 more)
User/: main.c  main.h  stm32f4xx_it.c
esp32n1_door/: CMakeLists.txt
esp32n2_light_human/esp32n2_light_human/main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  udp_client.c
hardware/: Modbus_Relay.c  Modbus_Relay.h  OLED.c  OLED.h  OLED_Data.c  OLED_Data.h  all_sensor_data.c  all_sensor_data.h  delay.c  delay.h  diag_task.c  diag_task.h  esp01s.c  esp01s.h  json_parse.c  json_parse.h  key.c  key.h  led.c  led.h  logic.c  logic.h  motor_fan.c  motor_fan.h  mqtt_app.c  mqtt_app.h  runtime_config.c  runtime_config.h  screen.c  screen.h  uart1_modbus.c  uart1_modbus.h  uart2_esp01s.c  uart2_esp01s.h  uart4_screen.c  uart4_screen.h  usart3_debug.c  usart3_debug.h
环境保障屏幕/: 24宋体.zi  (+13 more)
(+78 files in other folders)
